Changed out logo image, updated contact form, fixed alignment on SMS notifier button/widget

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -39,9 +39,7 @@ hr {
 	    background-position:0 0, 25px 0, 25px -25px, 0px 25px;
 }
 img.logo {
-	max-width:emCalc(35px);
-	max-height:emCalc(35px);
-	padding-bottom:emCalc(1px);
+	margin-bottom:emCalc(1px);
 }
 .card {min-height:100vh;}
 
@@ -196,7 +194,7 @@ a.disabled {color:$darkRed;}
     transition-timing-function: ease-out;
     transition-delay: 0s;
 }
-.contain-to-grid.nav {
+div.contain-to-grid {
 	border-bottom:4px solid $red;
 }
 [data-magellan-expedition] {
