--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -6743,34 +6743,32 @@ hr {
 
 /* line 41, ../sass/_global.scss */
 img.logo {
-  max-width: 2.1875em;
-  max-height: 2.1875em;
-  padding-bottom: 0.0625em;
+  margin-bottom: 0.0625em;
 }
 
-/* line 46, ../sass/_global.scss */
+/* line 44, ../sass/_global.scss */
 .card {
   min-height: 100vh;
 }
 
-/* line 51, ../sass/_global.scss */
+/* line 49, ../sass/_global.scss */
 h1 {
   font-size: 4.5em;
   font-weight: 700;
 }
 
-/* line 56, ../sass/_global.scss */
+/* line 54, ../sass/_global.scss */
 h1.subheader {
   font-weight: 300;
   font-size: 2em;
 }
 
-/* line 60, ../sass/_global.scss */
+/* line 58, ../sass/_global.scss */
 p {
   color: #2b0905;
 }
 
-/* line 63, ../sass/_global.scss */
+/* line 61, ../sass/_global.scss */
 .redButton {
   border-style: solid;
   border-width: 1px;
@@ -6804,14 +6802,14 @@ p {
   color: white;
 }
 
-/* line 69, ../sass/_global.scss */
+/* line 67, ../sass/_global.scss */
 .redButton:active {
   position: relative;
   top: 1px;
   left: 1px;
 }
 
-/* line 74, ../sass/_global.scss */
+/* line 72, ../sass/_global.scss */
 .beigeButton {
   border-style: solid;
   border-width: 1px;
@@ -6846,7 +6844,7 @@ p {
   color: #333333;
 }
 
-/* line 81, ../sass/_global.scss */
+/* line 79, ../sass/_global.scss */
 .goldButton {
   border-style: solid;
   border-width: 1px;
@@ -6881,33 +6879,33 @@ p {
   color: white;
 }
 
-/* line 88, ../sass/_global.scss */
+/* line 86, ../sass/_global.scss */
 .beigeButton:active {
   position: relative;
   top: 1px;
   left: 1px;
 }
 
-/* line 93, ../sass/_global.scss */
+/* line 91, ../sass/_global.scss */
 #navButton {
   border: none;
   min-width: 10em;
   min-height: 2.8125em;
 }
 
-/* line 98, ../sass/_global.scss */
+/* line 96, ../sass/_global.scss */
 .button#mHeroButton {
   min-height: 6.25em;
   border: none;
 }
 
-/* line 102, ../sass/_global.scss */
+/* line 100, ../sass/_global.scss */
 .button#mSubHeroButton {
   min-height: 3.125em;
   border: none;
 }
 
-/* line 107, ../sass/_global.scss */
+/* line 105, ../sass/_global.scss */
 .playStore {
   background: #efc657 url(../img/playStoreButtonLight.png) no-repeat;
   background-position: center center;
@@ -6915,12 +6913,12 @@ p {
   min-height: 2.8125em;
 }
 
-/* line 115, ../sass/_global.scss */
+/* line 113, ../sass/_global.scss */
 .goldButton.playStore {
   min-width: 10em;
 }
 
-/* line 116, ../sass/_global.scss */
+/* line 114, ../sass/_global.scss */
 .appStore {
   background: #efc657 url(../img/appStoreButtonLight.png) no-repeat;
   background-position: center center;
@@ -6928,12 +6926,12 @@ p {
   min-height: 2.8125em;
 }
 
-/* line 124, ../sass/_global.scss */
+/* line 122, ../sass/_global.scss */
 .goldButton.appStore {
   min-width: 10em;
 }
 
-/* line 125, ../sass/_global.scss */
+/* line 123, ../sass/_global.scss */
 .appStoreLight {
   background: #f8f6f3 url(../img/appStoreButtonLight.png) no-repeat;
   background-position: center center;
@@ -6941,7 +6939,7 @@ p {
   min-height: 2.8125em;
 }
 
-/* line 134, ../sass/_global.scss */
+/* line 132, ../sass/_global.scss */
 .playStoreLight {
   background: #f8f6f3 url(../img/playStoreButtonLight.png) no-repeat;
   background-position: center center;
@@ -6949,7 +6947,7 @@ p {
   min-height: 2.8125em;
 }
 
-/* line 144, ../sass/_global.scss */
+/* line 142, ../sass/_global.scss */
 .tumblrBtn {
   background: #a33f2d url(../img/tumblr.png) no-repeat;
   background-position: center center;
@@ -6958,7 +6956,7 @@ p {
   min-width: 9.375em;
 }
 
-/* line 153, ../sass/_global.scss */
+/* line 151, ../sass/_global.scss */
 .fbBtn {
   background: #a33f2d url(../img/fb.png) no-repeat;
   background-position: center center;
@@ -6967,7 +6965,7 @@ p {
   min-width: 9.375em;
 }
 
-/* line 162, ../sass/_global.scss */
+/* line 160, ../sass/_global.scss */
 .twitterBtn {
   background: #a33f2d url(../img/twitter.png) no-repeat;
   background-position: center center;
@@ -6976,7 +6974,7 @@ p {
   min-width: 9.375em;
 }
 
-/* line 173, ../sass/_global.scss */
+/* line 171, ../sass/_global.scss */
 .footer {
   min-width: 100vw;
   background: #a33f2d;
@@ -6984,37 +6982,37 @@ p {
   padding: 1.875em 0;
 }
 
-/* line 179, ../sass/_global.scss */
+/* line 177, ../sass/_global.scss */
 .footer ul {
   list-style: none;
 }
 
-/* line 182, ../sass/_global.scss */
+/* line 180, ../sass/_global.scss */
 .footer ul a {
   color: #ece3d6;
 }
 
-/* line 183, ../sass/_global.scss */
+/* line 181, ../sass/_global.scss */
 .footer ul a:hover {
   color: #efc657;
 }
 
-/* line 184, ../sass/_global.scss */
+/* line 182, ../sass/_global.scss */
 .footer ul a:visited {
   color: #ece3d6;
 }
 
-/* line 185, ../sass/_global.scss */
+/* line 183, ../sass/_global.scss */
 a.disabled {
   color: #2b0905;
 }
 
-/* line 189, ../sass/_global.scss */
+/* line 187, ../sass/_global.scss */
 .top-bar {
   margin-bottom: 0;
 }
 
-/* line 192, ../sass/_global.scss */
+/* line 190, ../sass/_global.scss */
 .top-bar a {
   transition: all 0.12s ease-out 0s;
   transition-property: all;
@@ -7023,12 +7021,12 @@ a.disabled {
   transition-delay: 0s;
 }
 
-/* line 199, ../sass/_global.scss */
-.contain-to-grid.nav {
+/* line 197, ../sass/_global.scss */
+div.contain-to-grid {
   border-bottom: 4px solid #a33f2d;
 }
 
-/* line 202, ../sass/_global.scss */
+/* line 200, ../sass/_global.scss */
 [data-magellan-expedition] {
   background: #f8f6f3;
   padding: 0.3125em;
@@ -7145,8 +7143,8 @@ div.heroText {
 }
 
 /* line 89, ../sass/_home.scss */
-.heroText button {
-  margin-top: 1em;
+.heroText input {
+  min-height: 2.9375em;
 }
 
 /* line 93, ../sass/_home.scss */
